[gd_scene load_steps=7 format=2]

[ext_resource path="res://new_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui.gd" type="Script" id=2]
[ext_resource path="res://Terminus 8x8 Monospaced.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://border.png" type="Texture" id=4]
[ext_resource path="res://major_update.tres" type="Animation" id=5]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 2
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 18.0

[node name="level" type="Label" parent="HBoxContainer"]
margin_right = 477.0
margin_bottom = 18.0
size_flags_horizontal = 3
text = "level: 0"
align = 1

[node name="score" type="Label" parent="HBoxContainer"]
margin_left = 481.0
margin_right = 958.0
margin_bottom = 18.0
size_flags_horizontal = 3
text = "score: 0"
align = 1

[node name="shields" type="Label" parent="HBoxContainer"]
margin_left = 962.0
margin_right = 1439.0
margin_bottom = 18.0
size_flags_horizontal = 3
text = "shields: 0"
align = 1

[node name="fire_rate" type="Label" parent="HBoxContainer"]
margin_left = 1443.0
margin_right = 1920.0
margin_bottom = 18.0
size_flags_horizontal = 3
text = "fire rate: 0"
align = 1

[node name="update_data" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -412.0
margin_top = 500.0
margin_right = 288.0
margin_bottom = 600.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "level up"
align = 1
uppercase = true

[node name="top_border" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -600.0
margin_right = 287.996
margin_bottom = 400.0
rect_scale = Vector2( -1, 1 )
rect_clip_content = true
texture = ExtResource( 4 )
expand = true

[node name="bottom_border" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 512.0
margin_top = -400.0
margin_right = 1312.0
margin_bottom = 600.0
texture = ExtResource( 4 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/major_update = ExtResource( 5 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -440.0
margin_top = -200.0
margin_right = -40.0
margin_bottom = 200.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
margin_right = 198.0
margin_bottom = 400.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 198.0
margin_bottom = 40.0
size_flags_vertical = 6
text = "speed"

[node name="Label2" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 89.0
margin_right = 198.0
margin_bottom = 107.0
size_flags_vertical = 6
text = "acc"

[node name="Label3" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 156.0
margin_right = 198.0
margin_bottom = 174.0
size_flags_vertical = 6
text = "drag"

[node name="Label4" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 223.0
margin_right = 198.0
margin_bottom = 241.0
size_flags_vertical = 6
text = "max v"

[node name="Label5" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 290.0
margin_right = 198.0
margin_bottom = 308.0
size_flags_vertical = 6
text = "max r"

[node name="Label6" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 358.0
margin_right = 198.0
margin_bottom = 376.0
size_flags_vertical = 6
text = "r acc"

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/HBoxContainer"]
margin_left = 202.0
margin_right = 400.0
margin_bottom = 400.0
size_flags_horizontal = 3

[node name="speed" type="HSlider" parent="Panel/HBoxContainer/VBoxContainer2"]
margin_top = 23.0
margin_right = 198.0
margin_bottom = 39.0
focus_mode = 1
size_flags_vertical = 6
ticks_on_borders = true
focus_mode = 1

[node name="acc" type="HSlider" parent="Panel/HBoxContainer/VBoxContainer2"]
margin_top = 90.0
margin_right = 198.0
margin_bottom = 106.0
size_flags_vertical = 6

[node name="drag" type="HSlider" parent="Panel/HBoxContainer/VBoxContainer2"]
margin_top = 157.0
margin_right = 198.0
margin_bottom = 173.0
size_flags_vertical = 6

[node name="max_v" type="HSlider" parent="Panel/HBoxContainer/VBoxContainer2"]
margin_top = 224.0
margin_right = 198.0
margin_bottom = 240.0
size_flags_vertical = 6

[node name="max_r" type="HSlider" parent="Panel/HBoxContainer/VBoxContainer2"]
margin_top = 291.0
margin_right = 198.0
margin_bottom = 307.0
size_flags_vertical = 6

[node name="r_acc" type="HSlider" parent="Panel/HBoxContainer/VBoxContainer2"]
margin_top = 359.0
margin_right = 198.0
margin_bottom = 375.0
size_flags_vertical = 6

